Smooth Uniforms should now be correct